<resources>

    <string name="app_name">Alsaremote</string>
    <string name="title_activity_control">Alsa Mixer</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_user">User</string>
    <string name="pref_user_summary">Ssh login</string>
    <string name="pref_mdp">Password</string>
    <string name="pref_mdp_summary">Login password</string>
    <string name="pref_hostname">Server</string>
    <string name="pref_hostname_summary">IP adresse IP or hostname</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_summary">Ssh port</string>
    <string name="pref_privateKey_passphrase">Passphrase SSH</string>
    <string name="pref_privateKey_passphrase_summary">SSh private passphrase</string>
    <string name="pref_privateKey_summary">SSh private key path</string>
    <string name="radio">Radio</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_radio">RadioActivity</string>

</resources>